fix: switch service discovery to EndpointSlice